--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@
 }
 
 body {
-  background-color: bisque;
+  background-color: white;
   max-width: 375px;
 }
 
@@ -67,10 +67,15 @@ h1 {
   justify-content: space-between;
   margin: 0 30px 0;
   padding-top: 10px;
+  padding-bottom: 5px;
 }
 
 header p {
   font-family: 'Courier Std';
   font-style: normal;
   font-size: 12px;
+}
+
+hr{
+  border: 1px solid #000;
 }
