--- a/css/styles.css
+++ b/css/styles.css
@@ -122,3 +122,16 @@ h2 {
   padding-left: 30px;
   margin-top: 0px;
 }
+
+main p {
+  font-size: 13px;
+  font-family: "Courier Std";
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  padding-left: 30px;
+  padding-right: 30px;
+  text-align: justify;
+}
+
+
