--- a/css/styles.css
+++ b/css/styles.css
@@ -81,28 +81,36 @@ hr {
 }
 
 @keyframes scroll {
-	from {transform: translateX(0);}
-	to {transform: translateX(-100%);}
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
 }
 
 @keyframes text {
-	from {transform: translateX(-100%);}
-	to {transform: translateX(0);}
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
 }
 
 .scroll {
   font-family: "Courier Std";
   font-weight: bold;
   font-style: italic;
-  font-size: 19px; 
+  font-size: 19px;
 }
 
 .track {
   height: 100%;
-	white-space: nowrap;
+  white-space: nowrap;
 }
 
-.track>p>strong {
+.track > p > strong {
   color: #000;
 }
 
@@ -134,4 +142,74 @@ main p {
   text-align: justify;
 }
 
+.container {
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+}
 
+.slider {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1;
+}
+
+.content {
+  position: relative;
+  width: 640px;
+  height: 360px;
+}
+
+figure {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+img {
+  width: 100%;
+  transform-origin: center;
+  transition-duration: 1s;
+  transition-property: transform, opacity;
+  transform: scale(1.3);
+  opacity: 0;
+}
+
+.show img {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.navigation {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0px 30px;
+  width: 100%;
+  padding-top: 100px;
+}
+
+button {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid #ecedf0;
+  cursor: pointer;
+  background-color: #fff;
+  position: absolute;
+  right: 50px;
+  display: flex;
+  top: 120px;
+  opacity: 0.3;
+
+}
