--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ hr {
 }
 
 .text {
-  animation: scroll 7000ms linear infinite;
+  animation: scroll 20000ms linear infinite;
   align-items: center;
   display: inline-flex;
   will-change: transform;
@@ -167,16 +167,14 @@ figure {
   top: 0;
   left: 0;
   display: flex;
-  border-radius: 6px;
   overflow: hidden;
 }
 
 img {
   width: 100%;
   transform-origin: center;
-  transition-duration: 1s;
-  transition-property: transform, opacity;
-  transform: scale(1.3);
+  transition-duration: 0.5s;
+  transition-property: transform, opacity; 
   opacity: 0;
 }
 
@@ -211,5 +209,9 @@ button {
   display: flex;
   top: 120px;
   opacity: 0.3;
+}
 
+i.arrow {
+  font-size: 22px;
+  color: grey;
 }
