--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,6 @@ main p {
   font-family: "Courier Std";
   font-weight: 500;
   font-style: normal;
-  font-display: swap;
   padding-left: 30px;
   padding-right: 30px;
   text-align: justify;
@@ -201,7 +200,7 @@ figure {
   padding-top: 100px;
 }
 
-button {
+.slider-button {
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -220,12 +219,28 @@ i.arrow {
   color: grey;
 }
 
-.box{
-  max-width: 150px;
-}
-
 .boxes{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+article img {
+  max-width: 150px;
+}
+
+/* .pumpkin{
+  background-color: orange;
+} */
+
+.buying-button{
+  border: 2px dotted black;
+  background-color: white;
+  color: black;
+  font-family: "Amatic SC";
+  font-weight: bold;
+  font-style: normal;
+  font-size: 15px;
+  padding: 4px;
+  margin-top: 10px;
 }
