added the name of the places that are on my swiss cart

--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,7 @@ figure {
   width: 100%;
   transform-origin: center;
   transition-duration: 0.5s;
-  transition-property: transform, opacity; 
+  transition-property: transform, opacity;
   opacity: 0;
 }
 
@@ -222,7 +222,7 @@ i.arrow {
   color: grey;
 }
 
-.boxes{
+.boxes {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -236,7 +236,7 @@ article img {
   background-color: orange;
 } */
 
-.buying-button{
+.buying-button {
   border: 2px dotted black;
   background-color: white;
   color: black;
@@ -252,13 +252,21 @@ article img {
 }
 
 .point-de-vente {
-  margin-top: 95px; 
+  margin-top: 95px;
   margin-bottom: 0px;
 }
 
-.point-de-vente img{
+.point-de-vente img {
   width: 240px;
   display: block;
   margin: auto;
+}
 
+.point-de-vente p {
+  margin-top: 0px;
+  text-align: center;
+  color: black;
+  font-family: "Courier Std";
+  font-style: italic;
+  font-size: 15px;
 }
