started footer by adding main address
i realized that i've written swiss "cart" instead of map on my two previous commit, my bad…

--- a/css/styles.css
+++ b/css/styles.css
@@ -270,3 +270,22 @@ article img {
   font-style: italic;
   font-size: 15px;
 }
+
+footer{
+  background-color: black;
+  color: white;
+}
+
+footer h2{
+  font-family: "Amatic SC";
+  font-weight: normal;
+  font-size: 18px;
+  padding-top: 47px;
+}
+
+footer p {
+  font-size: 12px;
+  font-family: "Courier Std";
+  font-style: normal;
+  padding-left: 30px;
+}
